Changed transition property for mobile menu to make smoother as before the z-index transition and opacity took the same time but were at different rates so looked buggy

--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -99,7 +99,7 @@
 	justify-content: center;
 	align-items: center;
 
-	transition: opacity 0.4s ease-in-out, z-index 0.4s;
+	transition: opacity 0.4s ease-in-out, z-index 0.4s ease-in-out;
 
 	:not(:last-child) {
 		padding-bottom: 32px;
